# SSpMV

./: .gitignore  README.md
LeSpMV/: CMakeLists.txt  detect_plat.sh
LeSpMV/include/: LeSpMV.h  csr5_utils.h  general_config.h  memopt.h  mmio.h  plat_config.h  sparse_conversion.h  sparse_features.h  sparse_format.h  sparse_io.h  sparse_operation.h  sparse_partition.h  spmv_benchmark.h  spmv_bsr.h  spmv_coo.h  spmv_dia.h  spmv_s_ell.h  spmv_sell_c_R.h  spmv_sell_c_sigma.h  spmv_testroutine.h  thread.h  timer.h
LeSpMV/script/: All_testmtx.xlsx  BSR Res.xlsx  Best_Result.xlsx  COO Res.xlsx  CSR Res.xlsx  CSR5 Res.xlsx  DIA Res.xlsx  ELL Res.xlsx  Find_dataset.py  Gen_Best_Result.xlsx  Gen_Matrix.xlsx  Gen_Probability_Vectors.xlsx  Gen_features.xlsx  Labeled_Gen_Best_Result.xlsx  Labeled_Suite_Best_Result.xlsx  MKL Res.xlsx  NNZ low to High.xlsx  Probability_Vectors_new.xlsx  SELL Res.xlsx  SELL-c-R Res.xlsx  SELL-c-sigma Res.xlsx  SuieSparse_Matrix.xlsx  SuiteSparse_Matrix.xlsx  Suite_Probability_Vectors.xlsx  Suite_features.xlsx  Untested_data.xlsx  ValidGen_Matrix.xlsx  extract_features.py  run_features.py  run_genmtx.py  run_spmv.py  run_testMTX.py  write_detailed_label.py  write_label.py
LeSpMV/src/: sparse_features.cpp  spmv_bsr.cpp  spmv_coo.cpp  spmv_csr.cpp  spmv_csr5.cpp  spmv_dia.cpp  spmv_ell.cpp  spmv_s_ell.cpp  spmv_sell_c_R.cpp  spmv_sell_c_sigma.cpp
LeSpMV/test/: Get_features.cpp  baseline_mkl_csr.cpp  benchmark_spmv_bsr.cpp  benchmark_spmv_coo.cpp  benchmark_spmv_csr.cpp  benchmark_spmv_csr5.cpp  benchmark_spmv_dia.cpp  benchmark_spmv_ell.cpp  benchmark_spmv_sell.cpp  benchmark_spmv_sell_c_R.cpp  benchmark_spmv_sell_c_sigma.cpp  test_csr5_format.cpp  test_dia_format.cpp  test_sell_format.cpp
LeSpMV/utils/: mmio.cpp  partition.cpp  sparse_io.cpp  test_spmv_bsr.cpp  test_spmv_coo.cpp  test_spmv_csr.cpp  test_spmv_csr5.cpp  test_spmv_dia.cpp  test_spmv_ell.cpp  test_spmv_sell.cpp  test_spmv_sell_c_R.cpp  test_spmv_sell_c_sigma.cpp  thread.cpp
SmartAdpter/: README.md
SmartAdpter/models/: Ablation_20240716_160634.csv  Ablation_20240716_163856.csv  Ablation_20240716_170329.csv  Ablation_20240719_110610.csv  Ablation_Stu.py  DIESEL.py  DIESEL_20240716_151137.csv  Decision_Tree.py  DensityRep_20240716_125017.csv  Density_Reps.py  MMAdapter_20240712_154410.csv  MMAdapter_20240712_163900.csv  MMAdapter_20240715_150204.csv  MMAdapter_20240717_101205.csv  MMAdapter_20240724_093500.csv  MatNet.py  MatNet_20240716_131317.csv  SpMV_Adapter.py  SpMV_Adapter_prob.py  SpNet.py  SpNet_20240716_143651.csv  SpNet_20240719_142237.csv  TC_SpMV_Adapter_prob.py  baseline.py  compute_metrics.py  deep.py  evaluate.py  main.py  new_wide.py  new_wide_deep.py  new_wide_deep_add.py  new_wide_deep_concat.py  test_all.txt  test_genlist.txt  test_list.txt  train_all.txt  train_genlist.txt  train_genlist_backup_20250708_135006.txt  train_list.txt  train_xgboost.py  (+4 more)
SmartAdpter/utils/: SSpMV_setting.py  count_label.py  data_setting.py  load_MMdata.py  load_data.py  split_dataset.py
models/prediction_result/DIESEL/: metrics.res  predict_result.txt  test_acc.txt
models/prediction_result/Density_Reps/: metrics.res  predict_result.txt  test_acc.txt
models/prediction_result/MM_Adapter/: Abl_metrics.res  Abl_predict_result.txt  Abl_test_acc.txt  evaluate_acc.txt  metrics.res  predict_result.txt  test_acc.txt
models/prediction_result/MM_Adapter_pb/: evaluate_acc.txt  metrics.res  predict_result.txt
models/prediction_result/MatNet/: metrics.res  predict_result.txt  test_acc.txt
models/prediction_result/SpNet/: metrics.res  predict_result.txt  test_acc.txt
